fix: address review comments